Fix scattered issues from initial editorial review

--- a/content/1-history/5.md
+++ b/content/1-history/5.md
@@ -25,7 +25,7 @@ These studies also identified the presence of certain “professionals” who sp
 
 The history of the profession of *foderatore* (liner) in Naples sits at the intersection of craft, art, and profession, and it is here where the definition of the discipline of conservation-restoration unfolds.
 
-In 1960, Raffaello Causa—the renowned art historian who in the 1970s and ’80s would direct the *soprintendenza* for the Historical and Artistic Heritage of Naples, and who at that time headed the restoration laboratory of the Capodimonte Museum, highlighted this aspect by observing how in our city the conservation of paintings on canvas had been guaranteed by means of “an indisputable skill—and we would like to say a reckless ease—with which the lining of the canvases was performed here in Naples, an operation widely practiced by local restorers” ([[Causa 1960' '10' %}).
+In 1960, Raffaello Causa—the renowned art historian who in the 1970s and ’80s would direct the *soprintendenza* for the Historical and Artistic Heritage of Naples, and who at that time headed the restoration laboratory of the Capodimonte Museum, highlighted this aspect by observing how in our city the conservation of paintings on canvas had been guaranteed by means of “an indisputable skill—and we would like to say a reckless ease—with which the lining of the canvases was performed here in Naples, an operation widely practiced by local restorers” ({% cite 'Causa 1960' '10' %}).
 
 In fact, it is possible since at least the eighteenth century to trace the evidence and documents relating to the practice of *rintelaggio* or *foderatura:* the consolidation of deteriorated textile supports carried out by gluing these onto a new canvas. We also find that such activities were carried out early on by a particular figure, the *telaiolo,*[^1] or manufacturer of canvases for painting, who would also repair damaged canvases if required.
 
@@ -125,7 +125,8 @@ The documents testify to a remarkable awareness of the conservation problems pos
 
 Another important aspect of the caution shown by the museum administration concerns the practice of transfer, which was consciously avoided in the nineteenth century in the Museo Borbonico thanks to the awareness of its dangers. We find a clear testimony of this in a document dated 1810: Michele Arditi strongly opposed Paolino Girgenti, who wanted to transfer the *Strage degli Innocenti* by Andrea Vaccaro, in order to eliminate the imperfection caused by the seam joining the two pieces of canvas ({% cite 'D’Alconzo and Prisco 2005' '84' %}).
 
-The practice of transfer was carried out very early in Naples, since at least the eighteenth century. In 1742, Bernardo De Dominici recounted the skill of two Neapolitan artists, Nicolò di Simone and Alessandro Majello, who specialized in the transfer of flaking paintings on panel onto canvas supports ([[De Dominici \[1742–43\] 2003–14\|, 796, 994]], cited in {% cite 'Conti 2007' '140' %}).
+The practice of transfer was carried out very early in Naples, since at least the eighteenth century. In 1742, Bernardo De Dominici recounted the skill of two Neapolitan artists, Nicolò di Simone and Alessandro Majello, who specialized in the transfer of flaking paintings on panel onto canvas supports ({% cite 'De Dominici (1742–1743) 2003–14' '796, 994' 'De Dominici [1742–1743] 2003–14' %}, cited in {% cite 'Conti 2007' '140' %}).
+
 
 The restoration of a painting by Fedele Fischetti, *Noli Me Tangere*, from the church of Santa Caterina da Siena ([fig. 5.7a](#fig-5-7)), in 1998,[^13] enabled us to examine a material example of a partial transfer procedure, probably carried out by the artist himself during the execution of the painting, which can be traced back to 1766–1767. There are documents that refer to Fischetti’s activity as a restorer ({% cite 'Nappi 1984' '320' %}), but in this case it was possible to verify the procedure carried out long ago directly on a painting.
 
