--- a/content/6-interventions/34.md
+++ b/content/6-interventions/34.md
@@ -34,7 +34,7 @@ That these linings should still be in place and largely effective is all the mor
 
 ## The Nineteenth Century: A Few Preserved Examples of Linings and of Minimal Intervention
 
-In the nineteenth century, we find an earlier massive campaign of restoration, which occurred at a time of many acquisitions as a result of bequests. The public aspects of Roman restoration during this period are well known due to the activities of the Camuccini brothers: Pietro, a restorer, and Vincenzo, an inspector of public paintings ({% cite 'Giacomini 2007' %}). Among his collaborators, Vincenzo chose Pietro Palmaroli ([[Köster \[1827\] 2001\|, 123]]; {% cite 'Rinaldi 2004' %}) and Giuseppe Candida, who moved to Rome from Venice in 1803. Candida brought with him such cultural baggage as his experience in the workshop of Pietro Edwards ({% cite 'Conti 2003' '185, 229' %}; [[Köster \[1827\] 2001\|, 121]]).
+In the nineteenth century, we find an earlier massive campaign of restoration, which occurred at a time of many acquisitions as a result of bequests. The public aspects of Roman restoration during this period are well known due to the activities of the Camuccini brothers: Pietro, a restorer, and Vincenzo, an inspector of public paintings ({% cite 'Giacomini 2007' %}). Among his collaborators, Vincenzo chose Pietro Palmaroli ({% cite 'Köster (1827) 2001' '123' 'Köster [1827] 2001' %}; {% cite 'Rinaldi 2004' %}) and Giuseppe Candida, who moved to Rome from Venice in 1803. Candida brought with him such cultural baggage as his experience in the workshop of Pietro Edwards ({% cite 'Conti 2003' '185, 229' %}; {% cite 'Köster (1827) 2001' '121' 'Köster [1827] 2001' %}).
 
 Restoration practices in the various private collections are less well known. Again, archival documents are of help. In those of the Corsini family we find paintings on which worked G. B. Beretta ({% cite 'Ventra 2016' %})—a restorer who also worked with Minardi—and going back in time, Palmaroli ({% cite 'Cosma 2016' '180ff.' %}) and Principe ({% cite 'Magnanimi 1980a' %}; {% cite 'Magnanimi 1980b' %}). So the same names come up in both the private and public sectors, and through these we will get a better picture of the Roman system.
 
