--- a/content/8-posters/43.md
+++ b/content/8-posters/43.md
@@ -29,7 +29,7 @@ The lining has several characteristics that point to an Italian method of canvas
 
 In Italy, there are two traditional glue-paste lining methods: Florentine and Roman. This distinction originates from the work of two nineteenth-century Italian restorers: Count Giovanni Secco-Suardo and Ulisse Forni. The glue-paste recipe and lining techniques advocated by Secco-Suardo informed the Florentine technique, whereas Forni’s became the basis for the Roman technique ({% cite 'Forni 1866' %}; {% cite 'Reifsnyder 1995' '77–78' %}).[^3] A characteristic difference often cited between these approaches is the glue-paste recipes;[^4] however, there is also a large variation in the types of lining canvas chosen. While both methods generally employ plain weave hemp and/or flax-based canvases, their weave densities differ greatly.
 
-Typically, the Florentine method uses a tighter weave, similar to the original canvas, though slightly more robust, to support the painting ([[Reifsnyder 1995\|, 79})}.[^5] This type of canvas is chosen to provide a more rigid support and minimize weave interference ({% cite 'Baldini and Taiti 2003' '116' %}). The Roman technique, in contrast, uses an open weave. There are two main types of this open-weave canvas: the more open *tela patta,* at 10–15 threads per inch, and the slightly more dense *tela pattina,* at 20–25 threads per inch. Selection of either the *tela patta* or *tela pattina* largely depends on the size of the painting, the structure of the original canvas, and the painting’s condition ({% cite 'Laroche and Saccarello 1996' '13' %}). Generally, this type of canvas allows for a lighter, more flexible support after lining; however, the overall flexibility is also highly dependent on the glue-paste recipe ({% cite 'Lavorini 2007' %}).[^6]
+Typically, the Florentine method uses a tighter weave, similar to the original canvas, though slightly more robust, to support the painting ({% cite 'Reifsnyder 1995' '79' %}).[^5] This type of canvas is chosen to provide a more rigid support and minimize weave interference ({% cite 'Baldini and Taiti 2003' '116' %}). The Roman technique, in contrast, uses an open weave. There are two main types of this open-weave canvas: the more open *tela patta,* at 10–15 threads per inch, and the slightly more dense *tela pattina,* at 20–25 threads per inch. Selection of either the *tela patta* or *tela pattina* largely depends on the size of the painting, the structure of the original canvas, and the painting’s condition ({% cite 'Laroche and Saccarello 1996' '13' %}). Generally, this type of canvas allows for a lighter, more flexible support after lining; however, the overall flexibility is also highly dependent on the glue-paste recipe ({% cite 'Lavorini 2007' %}).[^6]
 
 ## Brief Overview of the Traditional Roman Lining Process
 
