--- a/content/8-posters/53.md
+++ b/content/8-posters/53.md
@@ -127,4 +127,4 @@ The authors thank Ana Pereira for the FTIR-ATR analysis, Ilona Jaaranen and Basc
 
 [^10]: For large paintings, it is more practical to attach the interleaf to the lining canvas first (with a trowel) before aligning both to the reverse of the painting.
 
-[^11]: Three paintings (*Birds I, Birds II,* and *Mammals*) were lined with the technique described. The remaining two (*Rodents* and *Deer*) are much smaller, so the lining technique was adapted accordingly. The materials used were the same. For a detailed description see [[Barbosa et al. 2015}.
+[^11]: Three paintings (*Birds I, Birds II,* and *Mammals*) were lined with the technique described. The remaining two (*Rodents* and *Deer*) are much smaller, so the lining technique was adapted accordingly. The materials used were the same. For a detailed description see {% cite 'Barbosa et al. 2015' %}.
