Remove and renumber figures in paper 63

--- a/content/8-posters/63.md
+++ b/content/8-posters/63.md
@@ -51,9 +51,7 @@ After carrying out several experiments, our research focused on acrylic painting
 
 The desalination work to remove the embedded grime and salt from the canvasses could not be undertaken with any solvent besides water. However, there was a danger water might cause the canvas to shrink or the surface paints to peel off. We focused on the conservation state of fifteen large acrylic paintings among those canvas paintings damaged by the tsunami.
 
-Hardly any of the wooden frames were warped, even with the larger paintings, while the canvasses had only minimal shrinkage and there was no paint flaking. As a result, it was adjudged that shrinkage could probably be kept to a minimum even if water was applied to these canvasses. We prepared a life-size mock-up of a large acrylic painting, stretched it over an actual stretcher, and applied water ([fig. 63.3](#fig-63-3)). Hardly any shrinkage was observed ({% cite 'Tsuchiya et al. 2014' %}).
-
-{% figure 'fig-63-3' %}
+Hardly any of the wooden frames were warped, even with the larger paintings, while the canvasses had only minimal shrinkage and there was no paint flaking. As a result, it was adjudged that shrinkage could probably be kept to a minimum even if water was applied to these canvasses. We prepared a life-size mock-up of a large acrylic painting, stretched it over an actual stretcher, and applied water. Hardly any shrinkage was observed ({% cite 'Tsuchiya et al. 2014' %}).
 
 Based on this, we undertook a desalination trial using the absolute minimum amount of moisture. We first tried a treatment method using gel sheets. Gel sheets with a 1.5% concentration and a 7:2:1 ratio of carrageenan (a seaweed-based emulsifying agent), xanthan gum, and locust bean gum were chosen for their ease of use and suitability for the syneresis process. A 16 x 11 x 2 cm sheet was pressed against the rear side of the canvas and left for about thirty minutes before being replaced with a new sheet. This process was carried out twice. However, the chlorine (CI) values of the canvas (rear side) remained at between 50%–80% of the initial values ({% cite 'Tsuchiya et al. 2015' %}). This was because the gel sheets alone did not have sufficient moisture to remove the salt and other material that had seeped into the canvas fiber.
 
@@ -61,47 +59,39 @@ We next examined the blotter-washing technique used in paper conservation. After
 
 ## Preparing a Calibration Curve for the Cotton Cloth Used for the Canvas
 
-The residual chlorine CI values were measured using X-ray fluorescence spectroscopy (XFR). The obtained values were in centipoise (cP), so a calibration curve was prepared to convert these into parts-per-million (ppm) values. As the affected acrylic painting canvas was on cotton, we prepared a cotton cloth for our trials. We also prepared CI water solutions of 1, 10, 50, 100, 200, 300, 500, 700, 1000, 10,000, 35,000, and 100,000 ppm ([fig. 63.4](#fig-63-4)). These were applied to pieces of the cotton cloth and then dried. These were set as reference standards and measured using XRF. We targeted a figure of 33 ppm (the CI value of drinking water in Tokyo) for the residual CI density on the post-treatment canvas ([fig. 63.5](#fig-63-5)).
+The residual chlorine CI values were measured using X-ray fluorescence spectroscopy (XFR). The obtained values were in centipoise (cP), so a calibration curve was prepared to convert these into parts-per-million (ppm) values. As the affected acrylic painting canvas was on cotton, we prepared a cotton cloth for our trials. We also prepared CI water solutions of 1, 10, 50, 100, 200, 300, 500, 700, 1000, 10,000, 35,000, and 100,000 ppm. These were applied to pieces of the cotton cloth and then dried. These were set as reference standards and measured using XRF. We targeted a figure of 33 ppm (the CI value of drinking water in Tokyo) for the residual CI density on the post-treatment canvas ([fig. 63.3](#fig-63-3)).
 
-{% figure 'fig-63-4' %}
-
-{% figure 'fig-63-5' %}
+{% figure 'fig-63-3' %}
 
 ## The Desalination Work
 
-The target work was an acrylic painting by Masayoshi Nameki (figs. [63.6](#fig-63-6), [63.7](#fig-63-7)). The canvas had already been removed from the original stretcher. Polyester strips were attached to the edges of the canvas (strip-lining) and it was remounted on a larger stretcher. The size of the canvas was recorded before applying water, and then the desalination process was carried out.
-
-{% figuregroup '2' 'fig-63-6, fig-63-7' %}
+The target work was an acrylic painting by Masayoshi Nameki. The canvas had already been removed from the original stretcher. Polyester strips were attached to the edges of the canvas (strip-lining) and it was remounted on a larger stretcher. The size of the canvas was recorded before applying water, and then the desalination process was carried out.
 
 <div class="illustrated-list">
 
-1.  Water mixed with ethyl alcohol was sprayed onto the back of the canvas to apply moisture to the entire surface ([fig. 63.8](#fig-63-8)).
+1.  Water mixed with ethyl alcohol was sprayed onto the back of the canvas to apply moisture to the entire surface ([fig. 63.4](#fig-63-4)).
 
-    {% figure 'fig-63-8' %}
+    {% figure 'fig-63-4' %}
 
-2.  The entire surface was covered with dampened blotting paper and left for eight minutes ([fig. 63.9](#fig-63-9)).
+2.  The entire surface was covered with dampened blotting paper and left for eight minutes ([fig. 63.5](#fig-63-5)).
 
-    {% figure 'fig-63-9' %}
+    {% figure 'fig-63-5' %}
 
-3.  A highly absorbent resin sheet was placed over the blotting paper for two minutes to soak up the grime and salt absorbed by the blotting paper ([fig. 63.10](#fig-63-10)).
-
-    {% figure 'fig-63-10' %}
+3.  A highly absorbent resin sheet was placed over the blotting paper for two minutes to soak up the grime and salt absorbed by the blotting paper.
 
 4.  The blotting paper and resin sheet were removed and steps 1–3 were repeated five or six times. After the first application, the water that was sprayed on did not contain alcohol.
 
 5.  A thin paper sheet was placed against the surface and sprayed with water. This process was carried out twice to remove the absorbed grime and salt.
 
-6.  The salinity concentration levels of the chloride test paper were measured each time ([fig. 63.11](#fig-63-11), [fig. 63.12](#fig-63-12), [table 63.1](#table-63-1)).
+6.  The salinity concentration levels of the chloride test paper were measured each time [fig. 63.6](#fig-63-6), [table 63.1](#table-63-1)).
 
-    {% figure 'fig-63-11' %}
-
-    {% figure 'fig-63-12' %}
+    {% figure 'fig-63-6' %}
 
     {% figure 'table-63-1' 'is-table-scale-4' %}
 
-7.  Canvas shrinkage was recorded directly after each application of water, after the desalination process was totally finished, and the following day, when the canvas had dried ([fig. 63.13](#fig-63-13)).
+7.  Canvas shrinkage was recorded directly after each application of water, after the desalination process was totally finished, and the following day, when the canvas had dried ([fig. 63.7](#fig-63-7)).
 
-    {% figure 'fig-63-13' %}
+    {% figure 'fig-63-7' %}
 
 </div>
 
